@@ -1,3 +1,7 @@
+2005-05-16 Alain Magloire
+	Fix PR 91975
+	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java
+
 2005-05-12 Alain Magloire
 	Fix PR 94841
 	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Variable.java
